fix z-index close btn

--- a/packages/react/components/StoryModal/StoryModal.scss
+++ b/packages/react/components/StoryModal/StoryModal.scss
@@ -272,6 +272,7 @@
       top: 10px;
       right: 8px;
       position: absolute;
+      z-index: 99999;
 
       @media (max-width: 768px) {
         top: 18px;
